# kv

./: CHANGELOG.md  CMakeLists.txt  CMakePresets.json  README.md  vix.json
.vix/: vix_deps.cmake
.vix/_vix_build_softadastra.core/: CTestTestfile.cmake  cmake_install.cmake
.vix/_vix_build_softadastra.core/tests/: CTestTestfile.cmake  cmake_install.cmake  test_errors  test_hash  test_ids  test_time
.vix/_vix_build_softadastra.fs/: CTestTestfile.cmake  cmake_install.cmake
.vix/_vix_build_softadastra.fs/examples/: cmake_install.cmake  diff  scan  snapshot  watch
.vix/_vix_build_softadastra.fs/tests/: CTestTestfile.cmake  cmake_install.cmake  test_diff  test_path  test_snapshot  test_state  test_watcher
.vix/_vix_build_softadastra.store/: CTestTestfile.cmake  cmake_install.cmake
.vix/_vix_build_softadastra.store/examples/: cmake_install.cmake  store_basic  store_recovery
.vix/_vix_build_softadastra.store/tests/: CTestTestfile.cmake  cmake_install.cmake  test_engine  test_index  test_operation  test_recovery
.vix/_vix_build_softadastra.wal/: CTestTestfile.cmake  cmake_install.cmake
.vix/_vix_build_softadastra.wal/examples/: cmake_install.cmake  wal_event  wal_read  wal_replay_to_store  wal_stream  wal_write
.vix/_vix_build_softadastra.wal/tests/: CTestTestfile.cmake  cmake_install.cmake  test_append_event  test_encoder  test_reader  test_record  test_replay  test_sequence  test_store  test_writer
docs/: api.md  architecture.md  concepts.md  examples.md  getting-started.md  internals.md  roadmap.md  softadastra-integration.md  softadastra.md  sync.md  transactions.md  use-cases.md  watch.md  why-kv.md
examples/: CMakeLists.txt  basic_kv.cpp  durable_restart.cpp  prefix_scan.cpp
include/vix/kv/: kv.hpp
include/vix/kv/api/: Kv.hpp  KvOptions.hpp  Open.hpp
include/vix/kv/internal/: KvEngine.hpp
include/vix/kv/keys/: KeyEncoder.hpp  KeyPath.hpp
include/vix/kv/values/: KvValue.hpp  ValueCodec.hpp
src/api/: Kv.cpp  Open.cpp
src/internal/: KvEngine.cpp
src/keys/: KeyEncoder.cpp
src/values/: ValueCodec.cpp
tests/: CMakeLists.txt
tests/integration/: CMakeLists.txt  erase_test.cpp  list_prefix_test.cpp  open_close_test.cpp  recovery_test.cpp  set_get_test.cpp
tests/unit/: CMakeLists.txt
tests/unit/keys/: KeyEncoder_test.cpp  KeyPath_test.cpp
tests/unit/values/: KvValue_test.cpp  ValueCodec_test.cpp
